Agregue sección de FP y OOP. Reordene secciones.

--- a/secciones/12.1_funciones.ipynb
+++ b/secciones/12.1_funciones.ipynb
@@ -194,6 +194,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recursion and tail recursion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3!\n",
+    "def factorial(number):\n",
+    "    if number == 0:\n",
+    "        print(\"end\")\n",
+    "        return 1\n",
+    "    else:\n",
+    "        print(\"Calculated {}\".format(number))\n",
+    "        return number * factorial(number-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(factorial(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3!\n",
+    "def factorial(number, result = 1):\n",
+    "    if number == 0:\n",
+    "        print(\"end\")\n",
+    "        return result\n",
+    "    else:\n",
+    "        print(\"Calculated {}, result {}\".format(number, result))\n",
+    "        return factorial(number-1, number*result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(factorial(3))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
