--- a/secciones/12.4_decoradores.ipynb
+++ b/secciones/12.4_decoradores.ipynb
@@ -55,9 +55,9 @@
    "source": [
     "def upper(func):\n",
     "    def wrapper(*args, **kwargs):\n",
-    "        capitalize_name = func(*args, **kwargs)\n",
+    "        upper_name = func(*args, **kwargs)\n",
     "        \n",
-    "        return capitalize_name.upper()\n",
+    "        return upper_name.upper()\n",
     "    \n",
     "    return wrapper\n",
     "\n",
