--- a/secciones/13.1_clases.ipynb
+++ b/secciones/13.1_clases.ipynb
@@ -15,6 +15,7 @@
    "outputs": [],
    "source": [
     "class Mensaje:\n",
+    "    # Constructor\n",
     "    def __init__(self, saludo):\n",
     "        self.__despedida = \"Bye Bye\"\n",
     "        self.saludo = saludo\n",
